Revert "[pgr] fix (galleryView): remove overflow: hidden from container"
This reverts commit 6c63370e9fb58850758be3aa64132261023103bb.

--- a/pro-gallery-renderer/src/components/styles/gallery.scss
+++ b/pro-gallery-renderer/src/components/styles/gallery.scss
@@ -490,6 +490,7 @@
   div.pro-gallery {
     width: 100%;
     height: 100%;
+    overflow: hidden;
     backface-visibility: hidden;
     position: relative;
 
